feat: [UPBE-129] adaptation of OnboardingStatusList in OnboardingService (#303)
Co-authored-by: frtrinca <106818915+frtrinca@users.noreply.github.com>
Co-authored-by: LarissaASLeite <105739146+LarissaASLeite@users.noreply.github.com>
Co-authored-by: marco-di-lisa <105736613+marco-di-lisa@users.noreply.github.com>
Co-authored-by: gammam <m.gammaldi@gmail.com>
Co-authored-by: petretiandrea <petretiandrea@gmail.com>
Co-authored-by: GiovanaSolorzano <105281122+GiovanaSolorzano@users.noreply.github.com>
Co-authored-by: Benedetta-fabbri <124246048+Benedetta-fabbri@users.noreply.github.com>
Co-authored-by: antonioT90 <34568575+antonioT90@users.noreply.github.com>
Co-authored-by: gammam <42178449+gammam@users.noreply.github.com>
Co-authored-by: Andrea Morabito <78792023+and-mora@users.noreply.github.com>
Co-authored-by: Giulia Tremolada <124147597+giulia-tremolada@users.noreply.github.com>
Co-authored-by: stedelia <144045955+stedelia@users.noreply.github.com>
Co-authored-by: DanieleRanaldo <124155243+DanieleRanaldo@users.noreply.github.com>
Co-authored-by: andreaV95 <157486351+Vitolo-Andrea@users.noreply.github.com>
Co-authored-by: EMELIGMWW <marta.meligarziera@emeal.nttdata.com>
Co-authored-by: Antonio Tarricone <110115827+antoniotarricone@users.noreply.github.com>
Co-authored-by: del Gaudio, Alessandro <alessndro.delgaudio@nttdata.com>
Co-authored-by: Aledelga <alessandro.delgaudio@nttdata.com>